--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,5 +37,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://app.simplefileupload.com/buckets/c543f09b6274783884f53c50b043c765.js"></script>
   </body>
 </html>
